got cutout downloads working

--- a/web_app/host/templates/host/form.html
+++ b/web_app/host/templates/host/form.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   </head>
   <body>
-  <form method="POST">
+  <form align="center", method="POST">
     {% csrf_token %}
 	{{ form }}
     <button type="submit">Submit</button>
