--- a/web_app/host/templates/host/results.html
+++ b/web_app/host/templates/host/results.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bokeh Scatter Plots</title>
+    <title>Results</title>
    <link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.css" type="text/css" />
  </head>
+  <h1>Results</h1>
  <body>
-     {{ div | safe }}
+    <h2>Download Report</h2>
+    Imaging data could not be downloaded for the following surveys:
+    <ul>
+        {% for survey in missing_data %}
+        <li>{{ survey }}</li>
+        {% endfor %}
+    </ul>
+    <h2>Cutout Images</h2>
+     {{ bokeh_cutout_div | safe }}
 </body>
     <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js"></script>
-    {{ script | safe }}
+    {{ bokeh_cutout_script | safe }}
 </html>
