--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -15,6 +15,8 @@
     </ul>
     <h2>Cutout Images</h2>
      {{ bokeh_cutout_div | safe }}
+    <h2>Catalog photometry</h2>
+     {{ bokeh_catalog_div | safe }}
 </body>
     <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js"></script>
     {{ bokeh_cutout_script | safe }}
