added base html template with bootstrap navbar and footer

--- a/app/host/templates/host/form.html
+++ b/app/host/templates/host/form.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  </head>
-  <body>
+{% extends 'host/base.html' %}
+
+{% block title %} Submit {% endblock %}
+
+{% block body %}
   <form align="center", method="POST">
     {% csrf_token %}
-	{{ form }}
+    {{ form }}
     <button type="submit">Submit</button>
   </form>
-  </body>
-</html>
+{% endblock %}
