readthedocs requirements added

--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -39,7 +39,7 @@
                             <a class="nav-link">Submit</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="https://blast.readthedocs.io/en/latest/">
                                 <i class="bi bi-book"></i> Docs
                             </a>
                         </li>
