--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -4,6 +4,7 @@
         <title>{% block title %}{% endblock %}</title>
         <!-- Bokeh -->
         <link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.css" type="text/css"/>
+        <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js"></script>
         <!-- Boostrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
               rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -52,9 +53,10 @@
                 </div>
             </div>
         </nav>
-
-            {% block body %}
-            {% endblock %}
+            <div class="container">
+                {% block body %}
+                {% endblock %}
+            </div>
 
         <footer class="footer fixed-bottom py-3 bg-light">
             <div class="container">
@@ -63,10 +65,11 @@
                 </span>
              </div>
         </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js"></script>
-
+    {% block script %}{% endblock %}
     </body>
 </html>
 
