--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -1,18 +1,53 @@
-{% extends 'host/base.html %}
+{% extends 'host/base.html' %}
 
 {% block title %} Results {% endblock %}
+{% block script %} {{ bokeh_sed_script | safe }} {% endblock %}
 
 {% block body %}
-    <h1>Results</h1>
-    <h2>Download Report</h2>
-    Imaging data could not be downloaded for the following surveys:
-    <ul>
-        {% for survey in missing_data %}
-        <li>{{ survey }}</li>
-        {% endfor %}
+    <h2>{{ transient_name }}</h2>
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active"
+                    id="overview-tab"
+                    data-bs-toggle="tab"
+                    data-bs-target="#overview"
+                    type="button" role="tab"
+                    aria-controls="home"
+                    aria-selected="true">Overview</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link"
+                    id="sed-tab"
+                    data-bs-toggle="tab"
+                    data-bs-target="#sed"
+                    type="button" role="tab"
+                    aria-controls="profile"
+                    aria-selected="false">Host SED</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link"
+                    id="image-tab"
+                    data-bs-toggle="tab"
+                    data-bs-target="#image"
+                    type="button" role="tab"
+                    aria-controls="contact"
+                    aria-selected="false">Images</button>
+        </li>
     </ul>
-    <h2>Cutout Images</h2>
-     {{ bokeh_cutout_div | safe }}
-    <h2>Catalog photometry</h2>
-     {{ bokeh_catalog_div | safe }}
+
+    <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="overview" role="tabpanel"
+             aria-labelledby="overview-tab">
+            Nothing to see here, yet.
+        </div>
+        <div class="tab-pane fade" id="sed" role="tabpanel"
+             aria-labelledby="sed-tab">
+            {{ bokeh_sed_div | safe }}
+        </div>
+        <div class="tab-pane fade" id="image" role="tabpanel"
+             aria-labelledby="image-tab">
+            Nothing to see here, yet.
+        </div>
+    </div>
+
 {% endblock %}
