got TNS transient data ingestion to work, and updated conda install docs to find the conda env version of pip

--- a/app/host/templates/host/transient_list.html
+++ b/app/host/templates/host/transient_list.html
@@ -16,7 +16,7 @@
   <tbody>
     {% for transient in transients %}
     <tr>
-      <th scope="row">{{transient.name}}</th>
+      <th scope="row">{{transient.tns_name}}</th>
       <td>{{transient.ra_deg}}</td>
       <td>{{transient.dec_deg}}</td>
       <td>{{transient.processing_status}}</td>
