added a tests for tns

--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -34,10 +34,10 @@
                             <a class="nav-link" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="/transients">Transients</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Submit</a>
+                            <a class="nav-link" href="/analytics">Analytics</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://blast.readthedocs.io/en/latest/">
