--- a/app/host/templates/host/transient_list.html
+++ b/app/host/templates/host/transient_list.html
@@ -4,6 +4,17 @@
 
 {% block body %}
 
+{% load crispy_forms_tags %}
+
+<h2>Transients</h2>
+  <form align="left", method="POST", class="form-inline">
+    {% csrf_token %}
+    {{ form.name | as_crispy_field }}
+    <button type="submit", class="btn btn-success">Search</button>
+  </form>
+
+
+
 <table class="table">
   <thead>
     <tr>
@@ -18,8 +29,8 @@
   <tbody>
     {% for transient in transients %}
     <tr>
-      <th>{{transient.tns_name}}</th>
-      <th>{{transient.tns_prefix}}</th>
+      <td>{{transient.tns_name}}</td>
+      <td>{{transient.tns_prefix}}</td>
       <td>{{transient.ra_deg}}</td>
       <td>{{transient.dec_deg}}</td>
       <td>{{transient.public_timestamp}}</td>
