--- a/app/host/templates/host/analytics.html
+++ b/app/host/templates/host/analytics.html
@@ -15,9 +15,9 @@
   <tbody>
     {% for call in resource_calls %}
     <tr>
-      <th>{{call.resource_name}}</th>
-      <th>{{call.request_time}}</th>
-      <th>{{call.response_status}}</th>
+      <td>{{call.resource_name}}</td>
+      <td>{{call.request_time}}</td>
+      <td>{{call.response_status}}</td>
     </tr>
    {% endfor %}
   </tbody>
