--- a/app/host/templates/host/transient_list.html
+++ b/app/host/templates/host/transient_list.html
@@ -27,6 +27,8 @@
       <th scope="col">Declination</th>
       <th scope="col">Discovery Date</th>
       <th scope="col">Host Match</th>
+        <th scope="col">Cutout Download</th>
+      <th scope="col">Results</th>
     </tr>
   </thead>
   <tbody>
@@ -38,6 +40,8 @@
       <td>{{transient.dec_deg}}</td>
       <td>{{transient.public_timestamp}}</td>
       <td>{{transient.host_match_status}}</td>
+        <td>{{transient.image_download_status}}</td>
+    <td><a class="nav-link" href="{{transient.tns_name}}/">{{transient.tns_name}}</a></td>
     </tr>
    {% endfor %}
   </tbody>
