--- a/app/host/templates/host/transient_list.html
+++ b/app/host/templates/host/transient_list.html
@@ -39,8 +39,8 @@
       <td>{{transient.ra_deg}}</td>
       <td>{{transient.dec_deg}}</td>
       <td>{{transient.public_timestamp}}</td>
-      <td>{{transient.host_match_status}}</td>
-        <td>{{transient.image_download_status}}</td>
+      <td>{{transient.host_match_status}}</div></td>
+      <td>{{transient.image_download_status}}</div></td>
     <td><a class="nav-link" href="{{transient.tns_name}}/">{{transient.tns_name}}</a></td>
     </tr>
    {% endfor %}
