--- a/app/host/templates/host/transient_list.html
+++ b/app/host/templates/host/transient_list.html
@@ -36,8 +36,8 @@
     <tr>
       <td>{{transient.tns_name}}</td>
       <td>{{transient.tns_prefix}}</td>
-      <td>{{transient.ra_deg}}</td>
-      <td>{{transient.dec_deg}}</td>
+      <td>{{transient.ra}}</td>
+      <td>{{transient.dec}}</td>
       <td>{{transient.public_timestamp}}</td>
       <td><span class="{{transient.host_match_status_badge_class}}">{{transient.host_match_status}}</span></td>
       <td><span class="{{transient.image_download_status_badge_class}}">{{transient.image_download_status}}</span></td>
