adding task processing table

--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -14,7 +14,7 @@
             <div class="card">
                 <h5 class="card-header">TNS Information</h5>
                 <div class="card-body">
-                    <h5 class="card-title">{{transient.tns_name}}</h5>
+                    <h5 class="card-title">{{transient.name}}</h5>
                     <p class="card-text">Prefix: {{transient.tns_prefix}}</p>
                     <p class="card-text">Right ascension [deg]: {{transient.ra_deg}}</p>
                     <p class="card-text">Declination [deg]: {{transient.dec_deg}}</p>
