--- a/app/host/templates/host/transient_list.html
+++ b/app/host/templates/host/transient_list.html
@@ -34,14 +34,14 @@
   <tbody>
     {% for transient in transients %}
     <tr>
-      <td>{{transient.tns_name}}</td>
+      <td>{{transient.name}}</td>
       <td>{{transient.tns_prefix}}</td>
       <td>{{transient.ra}}</td>
       <td>{{transient.dec}}</td>
       <td>{{transient.public_timestamp}}</td>
       <td><span class="{{transient.host_match_status_badge_class}}">{{transient.host_match_status}}</span></td>
       <td><span class="{{transient.image_download_status_badge_class}}">{{transient.image_download_status}}</span></td>
-    <td><a class="nav-link" href="{{transient.tns_name}}/">{{transient.tns_name}}</a></td>
+    <td><a class="nav-link" href="{{transient.name}}/">{{transient.name}}</a></td>
     </tr>
    {% endfor %}
   </tbody>
