starting to fix status tables in the html

--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -58,7 +58,7 @@
                 {% endblock %}
             </div>
 
-        <footer class="footer fixed-bottom py-3 bg-light">
+        <footer class="footer py-3 bg-light">
             <div class="container">
                 <span class="text-muted">Report bugs and issues on Github
                     <a href="https://github.com/astrophpeter/blast/issues">here</a>.
