added image runner

--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -61,7 +61,8 @@
         <footer class="footer py-3 bg-light">
             <div class="container">
                 <span class="text-muted">Report bugs and issues on Github
-                    <a href="https://github.com/astrophpeter/blast/issues">here</a>.
+                    <a href="https://github.com/astrophpeter/blast/issues">here</a>
+
                 </span>
              </div>
         </footer>
