first attempt at local aperture photometry

--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -59,4 +59,8 @@
     </div>
 </div>
 
+    {% for item in transient.apeturephotometry_set.all %}
+        item.flux
+    {% endfor %}
+
 {% endblock %}
