--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </nav>
-            <div class="container">
+            <div class="container bg-light">
                 {% block body %}
                 {% endblock %}
             </div>
