further html template changes

--- a/app/host/templates/host/cutout_card.html
+++ b/app/host/templates/host/cutout_card.html
@@ -1,6 +1,6 @@
 {% load crispy_forms_tags %}
 <div class="card">
-    <h5 class="card-header">Host Match information</h5>
+    <h5 class="card-header">Imaging data</h5>
     <div class="card-body">
         {{ bokeh_cutout_div | safe }}
         <form class="form", method="POST">
