--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -6,7 +6,6 @@
 {% load crispy_forms_tags %}
 
 {% block body %}
-<h2>{{ transient.tns_name }}</h2>
 <div>&nbsp;</div>
 <div class="container">
     <div class="row">
@@ -14,6 +13,8 @@
                 {% include "host/information_card.html" %}
 
                 {% include "host/processing_status_card.html" %}
+
+                {% include "host/cutout_status_card.html" %}
 
                 {% include "host/photometry_card.html" %}
         </div>
