started sED plotting card

--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -22,6 +22,8 @@
 
         <div class="col-lg-7">
             {% include "host/cutout_card.html" %}
+
+            {% include "host/sed_card.html" %}
         </div>
     </div>
 </div>
