--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -1,7 +1,7 @@
 {% extends 'host/base.html' %}
 
 {% block title %} Results {% endblock %}
-{% block script %} {{ bokeh_cutout_script | safe }} {% endblock %}
+{% block script %} {{ bokeh_cutout_script | safe }} {{ bokeh_sed_local_script | safe }} {{ bokeh_sed_global_script | safe }}  {% endblock %}
 
 {% load crispy_forms_tags %}
 
