--- a/app/host/templates/host/processing_status_card.html
+++ b/app/host/templates/host/processing_status_card.html
@@ -1,12 +1,31 @@
 <div class="card">
     <h5 class="card-header">Processing Status</h5>
     <div class="card-body">
-        {% for item in transient.taskregister_set.all %}
-        <p class="card-text">
-            {{item.task.name}}
-            <span class="badge {{item.status.badge}}">{{item.status.message}}</span>
-        </p>
-        {% endfor %}
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Task Name</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Time taken (s)</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in transient.taskregister_set.all %}
+                <tr>
+                    <td>{{item.task.name}}</td>
+                    <td> <span class="badge {{item.status.badge}}">{{item.status.message}}</span></td>
+                    <td>
+                        {% if item.last_processing_time_seconds == 'None' %}
+                            --
+                        {% else %}
+                            {{item.last_processing_time_seconds}}
+                        {% endif %}
+                    </td>
+                </tr>
+               {% endfor %}
+            </tbody>
+        </table>
     </div>
-</div>
+</div>&nbsp;
+
 <div>&nbsp;</div>
