fixed bugs added sed params card

--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -24,6 +24,8 @@
             {% include "host/cutout_card.html" %}
 
             {% include "host/sed_card.html" %}
+
+            {% include "host/sed_inference_card.html" %}
         </div>
     </div>
 </div>
