classification, MW reddening info included

--- a/app/host/templates/host/information_card.html
+++ b/app/host/templates/host/information_card.html
@@ -6,6 +6,8 @@
          Right ascension: {{transient.ra}}<br>
          Declination: {{transient.dec}}<br>
          Discovery Date: {{transient.public_timestamp}}<br>
+         Classification: {{transient.spectroscopic_class}}<br>
+         MW E(B-V): {{transient.milkyway_dust_reddening}}<br>
          <br>
 
          <h5>Host</h5>
