--- a/app/host/templates/host/photometry_card.html
+++ b/app/host/templates/host/photometry_card.html
@@ -24,7 +24,8 @@
                 <thead>
                 <tr>
                     <th scope="col">Filter</th>
-                    <th scope="col">Flux</th>
+                    <th scope="col">Flux (mJy)</th>
+                    <th scope="col">Flux error (mJy)</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -32,6 +33,7 @@
                 <tr>
                     <td>{{item.filter.name}}</td>
                     <td>{{item.flux_rounded}}</td>
+                    <td>{{item.flux_error_rounded}}</td>
                 </tr>
                 {% endfor %}
                 </tbody>
@@ -50,7 +52,8 @@
                 <thead>
                 <tr>
                     <th scope="col">Filter</th>
-                    <th scope="col">Flux</th>
+                    <th scope="col">Flux (mJy)</th>
+                    <th scope="col">Flux error (mJy)</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -58,6 +61,7 @@
                     <tr>
                         <td>{{item.filter.name}}</td>
                         <td>{{item.flux_rounded}}</td>
+                        <td>{{item.flux_error_rounded}}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
