exposed flux error on the fron end

--- a/app/host/templates/host/photometry_card.html
+++ b/app/host/templates/host/photometry_card.html
@@ -46,7 +46,7 @@
             <h6>Aperture details</h6>
                 RA, DEC (J2000) = {{global_aperture.ra}}, {{global_aperture.dec}}<br>
             semi major axis, semi minor axis (arcsec) = {{global_aperture.semi_major_axis}}, {{global_aperture.semi_minor_axis}}<br>
-            angle (degrees, clockwise from north) = {{global_aperture.orientation_angle}}<br>
+            angle (degrees, anti-clockwise from east) = {{global_aperture.orientation_angle}}<br>
                 <br>
             <table class="table table-striped">
                 <thead>
