exposed flux error on the fron end

--- a/app/host/templates/host/photometry_card.html
+++ b/app/host/templates/host/photometry_card.html
@@ -18,7 +18,7 @@
                 <h6>Aperture details</h6>
             RA, DEC (J2000) = {{local_aperture.ra}}, {{local_aperture.dec}}<br>
             semi major axis, semi minor axis (arcsec) = {{local_aperture.semi_major_axis}}, {{local_aperture.semi_minor_axis}}<br>
-            angle (degrees, clockwise from north) = {{local_aperture.orientation_angle}}<br>
+            angle (degrees, anti-clockwise from east) = {{local_aperture.orientation_angle}}<br>
                 <br>
             <table class="table table-striped">
                 <thead>
