--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/analytics">Analytics</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link" href="/acknowledgements">Acknowledgements</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://blast.readthedocs.io/en/latest/">
                                 <i class="bi bi-book"></i> Docs
