tidying up fixutures and example data

--- a/app/host/templates/host/acknowledgements.html
+++ b/app/host/templates/host/acknowledgements.html
@@ -4,14 +4,12 @@
 
 {% block body %}
 
-
-<h2>Acknowledgements</h2>
-
-<p>
-    Blast is largely glue between already established software projects. It could not
+<div class="p-5 text-left bg-light">
+  <h1 class="mb-3">Acknowledgements</h1>
+  <h6 class="mb-3">Blast is largely glue between already established software projects. It could not
     exist without them. If you use blast, you <b>must</b> acknowledge and cite all
-    of the following projects which blast uses.
-</p>
+    of the following projects which blast uses.</h6>
+</div>
 
 <table class="table">
   <thead>
