--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -6,7 +6,11 @@
 {% load crispy_forms_tags %}
 
 {% block body %}
-<div>&nbsp;</div>
+
+<div class="p-5 text-left bg-light">
+  <h1 class="mb-3">{{transient.name}}</h1>
+</div>
+
 <div class="container">
     <div class="row">
         <div class="col-lg-5">
