--- a/app/host/templates/host/transient_list.html
+++ b/app/host/templates/host/transient_list.html
@@ -6,7 +6,10 @@
 
 {% load crispy_forms_tags %}
 
-<h2>Transients</h2>
+<div class="p-5 text-left bg-light">
+  <h1 class="mb-3">Transients</h1>
+  <h6 class="mb-3">Search Blast's database of transients</h6>
+</div>
 
 <form class="form", method="POST">
     {% csrf_token %}
