--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -31,14 +31,14 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="bi bi-house-door-fill"></i> Home</a>
+                            <a class="nav-link" href="/"><i class="bi bi-house-door-fill"></i> Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/transients"><i class="bi bi-search"></i> Transients</a>
                         </li>
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a class="nav-link" href="/analytics">Analytics</a>
-                        </li>
+                        </li>-->
                          <li class="nav-item">
                             <a class="nav-link" href="/acknowledgements"><i class="bi bi-mortarboard-fill"></i> Acknowledgements</a>
                         </li>
