added plotting utils and updated home page

--- a/app/host/templates/host/index.html
+++ b/app/host/templates/host/index.html
@@ -1,7 +1,7 @@
 {% extends 'host/base.html' %}
 
 {% block title %} Home {% endblock %}
-
+{% block script %} {{ bokeh_cutout_script | safe }} {% endblock %}
 {% block body %}
 
 {% load crispy_forms_tags %}
