--- a/app/host/templates/host/index.html
+++ b/app/host/templates/host/index.html
@@ -28,7 +28,7 @@
                 </p>
 
                 <p>
-                  Blast lightweight public web application built to find a transinet's host
+                  Blast is a public web application built to find a transinet's host
                   galaxy, identify the available
                   archival data, and measure the resulting host galaxy star formation
                   rates, masses, and stellar ages - for every new transient reported to
