--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -68,7 +68,10 @@
                     <a href="https://github.com/astrophpeter/blast/issues">here</a>
 
                 </span>
-             </div>
+             </div class="container">
+                <span style="margin-left:42px"><span class="text">UCSC Transitent team web pages
+                    <a href="https://transients.ucsc.edu/">here</a>
+
         </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
