new update for UCSC Transient Team web pages at footer

--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -64,12 +64,10 @@
 
         <footer class="footer py-3 bg-light">
             <div class="container">
-                <span class="text-muted">Report bugs and issues on Github
+                <span class="text">Report bugs and issues on Github
                     <a href="https://github.com/astrophpeter/blast/issues">here</a>
-
-                </span>
-             </div class="container">
-                <span style="margin-left:42px"><span class="text">UCSC Transitent team web pages
+                        
+                <span style="margin-left:2px"><span class="text">| UCSC Transitent team web pages
                     <a href="https://transients.ucsc.edu/">here</a>
 
         </footer>
