--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -64,12 +64,14 @@
 
         <footer class="footer py-3 bg-light">
             <div class="container">
-                <span class="text">Report bugs and issues on Github
+                <span class="text-muted">Report bugs and issues on Github
                     <a href="https://github.com/astrophpeter/blast/issues">here</a>
 
-                <span style="margin-left:2px"><span class="text">| UCSC Transitent team web pages
+                <span style="margin-left:2px"><span class="text-muted">| UCSC Transitent team web pages
                     <a href="https://transients.ucsc.edu/">here</a>
-
+                    
+                </span>
+            </div>
         </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
