--- a/app/host/templates/host/index.html
+++ b/app/host/templates/host/index.html
@@ -9,8 +9,9 @@
 <div class="p-5 text-left bg-light">
   <h1 class="mb-3">Welcome to blast!</h1>
   <h6 class="mb-3">A Django web app for the automatic real-time characterization of transient host galaxies</h6>
-  <a href="transients/" role="button" class="btn btn-success">Search the blast database <i class="bi bi-search"></i></a>
+  <a href="transients/" role="button" class="btn btn-success">Search the blast database <i class="bi bi-search"></i></a> <a href="https://blast.readthedocs.io/en/latest/index.html" role="button" class="btn btn-primary">Read the docs <i class=""bi bi-book-half""></i><i class="bi bi-book-half"></i></a>
 </div>
+
 
 
 <div class="container">
